[package]
name = "fanling-c-interface"
version = "0.1.2"
authors = ["martin <m.e@acm.org>"]
edition = "2018"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.81"
fanling-interface = { path = "../fanling-interface" }
fanling-engine = { path = "../fanling-engine" }
log = "0.4.11"
serde = "1.0.118"
serde_json = "1.0.60"
[target.'cfg(target_os = "android")'.dependencies]
android_log = "0.1.3"
taipo-git-control = { path = "../taipo-git-control" }

# [build-dependencies]
# cbindgen = "0.9.1"

[lib]
crate-type = ["staticlib", "rlib"]
