[package]
name = "fanling-engine"
version = "0.1.1"
authors = ["martin <m.e@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
askama = "=0.8.0"
askama_shared = "0.9.1"
bitfield = "0.13.2"
chrono ={ version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4.3", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
difference = "2.0.0"
dotenv = "0.15.0"
fanling-interface = { path = "../fanling-interface" }
log = "0.4.8"
pulldown-cmark = "0.7.0"
quick-error = "1.2.3"
regex = "1.3.5"
rusqlite = { version = "=0.14.0", features = ["bundled"] }
rust-embed = { version = "5.5.0", features = ["debug-embed"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_yaml = "0.8.11"
taipo-git-control = { path = "../taipo-git-control" }

