[package]
name = "fanling10"
version = "0.1.2"
authors = ["martin <m.e@acm.org>"]
edition = "2018"

[dependencies]

ansi_term = "0.12.1"
askama = "0.10.5"
askama_shared = "0.11.1"
config = "0.10.1"
fanling-engine = { path = "../fanling-engine" }
fanling-interface = { path = "../fanling-interface" }
log = "0.4.11"
quick-error = "2.0.0"
rust-embed = "5.7.0"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
structopt = "0.3.21"
taipo-git-control = { path = "../taipo-git-control" }

[target.'cfg(not(target_os = "android"))'.dependencies]
#web-view = "0.6.0"
web-view = { git = "https://github.com/Boscop/web-view" }
