[package]
name = "taipo-git-control"
version = "0.1.2"
authors = ["martin <m.e@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.11"
color-backtrace = "0.3.0"
dirs = "2.0.2"
git2 = "0.13.1"
git2_credentials = "0.6.0"
hex-slice = "0.1.4"
openssl = { version = "0.10.28", features = ["vendored"] }
quick-error = "1.2.3"
rand = "0.7.3"
# time = "0.2.6"
url = "2.1.1"
log = "0.4.8"
slurp = "1.0.1"

